--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>This is another new features</h1>
 
 <h1>Kanisorn Khetkhuean</h1>
-<h1>bug</h1>
+<h1>bugggggg</h1>
 <h1>new feature</h1>
 
 <p>This is paragraph1</p> 
